--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
     "name": "fiisoft/queue-provider",
     "type": "library",
-    "description": "This library provides implementations of several classes from other packages. The current solution works and requires RabbitMQ.",
+    "description": "This library provides implementations of several classes from other packages. The current solution is based on RabbitMQ and requires it.",
     "keywords": ["queue", "rabbitmq", "tasks queue", "commands"],
     "homepage": "https://github.com/fiiSoft/fiisoft-queue-provider",
     "license": "MIT",
-    "version": "2.1.0",
+    "version": "3.0.0",
     "authors": [
         {
             "name": "FiiSoft",
@@ -22,8 +22,8 @@
         "php": ">=5.6.0",
         "php-amqplib/php-amqplib": "^2.6.3",
         "psr/log": "^1.0.0",
-        "fiisoft/tasks-queue": "^3.0.0",
+        "fiisoft/tasks-queue": "^4.0.0",
         "fiisoft/basics": "^2.0.0",
-        "fiisoft/logger": "^2.0.0"
+        "fiisoft/logger": "^3.0.0"
     }
 }
